--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     <section id="experience">
         <h2>Experience</h2>
         <h3>Ministry of Interior – DMO (Jan 2023 – Present)</h3>
+        <h3>Cybersecurity Specialist</h3>
         <ul>
-            <li>Ensuring compliance with GRC frameworks</li>
-            <li>Transforming complex data into actionable insights</li>
-            <li>Implementing strategies for data protection compliance</li>
-            <li>Managing data access and analysis processes</li>
-            <li>Establishing cybersecurity KPIs</li>
-            <li>Monetizing data assets through strategic initiatives</li>
+            <li>Ensuring compliance with governance, risk, and compliance frameworks to mitigate security risk.</li>
+            <li>Creating clear visualizations to transform complex data into actionable insights.</li>
+            <li>Implementing strategies to protect personal information and ensure data protection compliance.</li>
+            <li>Managing protocols to ensure critical data is accessible to authorized users.</li>
+            <li>Performing data analysis to identify trends and support decision-making.</li>
+            <li>Establishing and monitoring key performance indicators (KPIs) to evaluate cybersecurity effectiveness.</li>
+            <li>Developing and implementing strategic plans to monetize data assets, leveraging partnerships for data sharing and creating innovative service offerings that drive profitability</li>
         </ul>
         <h3>Risk Assessment Specialist – MOI Technical Affairs</h3>
         <ul><li>Committee Member for Risk Management & Assessment</li></ul>
@@ -42,7 +44,8 @@
         <h2>Certifications & Research</h2>
         <ul>
             <li>CompTIA Security+ (SY0-701)</li>
-            <li>IEEE Member, TCP Member at CICN 2022 & CSNT 2023</li>
+            <li>IEEE Member</li>
+            <li>TCP Member at CICN 2022 & CSNT 2023</li> 
             <li><a href="https://doi.org/10.1109/CICN56167.2022.10008341" target="_blank">"Ibn Omar Hash Algorithm" – IEEE Xplore, 2022</a></li>
         </ul>
     </section>
@@ -79,11 +82,10 @@
     <h2>Services Offered</h2>
     <ul>
         <li><strong>Risk Assessment & GRC Audits:</strong> Evaluate and align your organization with regulatory frameworks.</li>
-        <li><strong>Security Compliance Consultation:</strong> ISO 27001, NCA, and data protection compliance support.</li>
+        <li><strong>Security Compliance & Consultation:</strong> NCA, and data protection compliance support.</li>
         <li><strong>Web Application Penetration Testing:</strong> Identify and remediate vulnerabilities in your applications.</li>
-        <li><strong>Data Protection & Privacy Strategy:</strong> Secure personal and sensitive data effectively.</li>
-        <li><strong>Custom Security Tool Development:</strong> Design and implementation of bespoke tools and scripts.</li>
-        <li><strong>Cybersecurity Training:</strong> Educational sessions tailored to your team’s needs.</li>
+        <li><strong>Data and Business Analytics:</strong> KPIs and Data Services.</li>
+        <li><strong>Cybersecurity Tutoring:</strong> Educational sessions tailored to your needs.</li>
     </ul>
 
     <h3>Request a Service</h3>
@@ -97,11 +99,10 @@
         <label for="service">Service:</label><br>
         <select id="service" name="service">
             <option value="Risk Assessment">Risk Assessment & GRC Audits</option>
-            <option value="Compliance">Security Compliance Consultation</option>
+            <option value="Compliance & Consulting">Security Compliance Consultation</option>
             <option value="PenTesting">Web Application Penetration Testing</option>
-            <option value="Privacy">Data Protection & Privacy</option>
-            <option value="Tooling">Custom Security Tool Development</option>
-            <option value="Training">Cybersecurity Training</option>
+            <option value="Data">KPIs & Data Services</option>
+            <option value="Tutoring">Cybersecurity Training</option>
         </select><br><br>
 
         <label for="message">Message:</label><br>
