--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <header>
-        <h1>Raed Shafei</h1>
+        <h1>Raed O. Shafei</h1>
         <p>Cybersecurity & Risk Management Specialist</p>
     </header>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Cybersecurity Specialist with over 2 years of experience currently working at the Ministry of Interior (DMO), Riyadh. I specialize in governance, risk management, compliance, and data protection. I’m also an IEEE-published researcher with a strong focus on data security and innovation.</p>
+        <p>Cybersecurity Specialist with over 2 years of experience currently working at the Ministry of Interior. I specialize in governance, risk management, compliance, and data protection. I’m also an IEEE-published researcher with a strong focus on data security and innovation.</p>
     </section>
 
     <section id="experience">
         <h2>Experience</h2>
-        <h3>Ministry of Interior – DMO (Jan 2023 – Present)</h3>
-        <h3>Cybersecurity Specialist</h3>
+        <h3>Ministry of Interior (Jan 2023 – Present)</h3>
+        <h3>Cybersecurity Specialist at Data Management Office</h3>
         <ul>
             <li>Ensuring compliance with governance, risk, and compliance frameworks to mitigate security risk.</li>
             <li>Creating clear visualizations to transform complex data into actionable insights.</li>
@@ -31,7 +31,7 @@
             <li>Establishing and monitoring key performance indicators (KPIs) to evaluate cybersecurity effectiveness.</li>
             <li>Developing and implementing strategic plans to monetize data assets, leveraging partnerships for data sharing and creating innovative service offerings that drive profitability</li>
         </ul>
-        <h3>Risk Assessment Specialist – MOI Technical Affairs</h3>
+        <h3>Risk Assessment & Management Specialist – MOI Technical Affairs</h3>
         <ul><li>Committee Member for Risk Management & Assessment</li></ul>
         <h3>HackathonX (Internship – May to Aug 2022)</h3>
         <ul>
@@ -44,8 +44,6 @@
         <h2>Certifications & Research</h2>
         <ul>
             <li>CompTIA Security+ (SY0-701)</li>
-            <li>IEEE Member</li>
-            <li>TCP Member at CICN 2022 & CSNT 2023</li> 
             <li><a href="https://doi.org/10.1109/CICN56167.2022.10008341" target="_blank">"Ibn Omar Hash Algorithm" – IEEE Xplore, 2022</a></li>
         </ul>
     </section>
@@ -54,7 +52,7 @@
         <h2>Skills</h2>
         <p><strong>Programming:</strong> Python, SQL, Java, C++, C, HTML, CSS, JavaScript</p>
         <p><strong>Tools:</strong> WireShark, Burp Suite, GitHub, Bitbucket, Postman, Power BI, MongoDB</p>
-        <p><strong>Operating Systems:</strong> Windows, macOS, Ubuntu, Kali Linux</p>
+        <p><strong>Operating Systems:</strong> Windows, macOS, Ubuntu, Linux</p>
         <p><strong>Soft Skills:</strong> Leadership, Teamwork, Creativity, Writing</p>
     </section>
 
