--- a/index.html
+++ b/index.html
@@ -7,17 +7,29 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-                anchor.addEventListener("click", function (e) {
-                    e.preventDefault();
-                    document.querySelector(this.getAttribute("href")).scrollIntoView({
-                        behavior: "smooth"
-                    });
-                });
-            });
-        });
+        // Theme Toggle Logic
+          function toggleTheme() {
+            const body = document.body;
+            const current = body.classList.contains("dark") ? "dark" : "light";
+            const next = current === "dark" ? "light" : "dark";
+            body.classList.remove(current);
+            body.classList.add(next);
+            localStorage.setItem("theme", next);
+          }
+        
+          // Load saved theme on page load
+          document.addEventListener("DOMContentLoaded", () => {
+            const saved = localStorage.getItem("theme") || "dark";
+            document.body.classList.add(saved);
+          });
+        
+          // Confirmation message for form submission
+          function showConfirmation() {
+            document.getElementById("confirmation").style.display = "block";
+            return true;
+  }
     </script>
+    <link rel="stylesheet" href="style_theme_toggle.css">
 </head>
 <body>
 <script>
@@ -29,6 +41,7 @@ function showConfirmation() {
 <header>
     <h1>Raed O. Shafei</h1>
     <p>Cybersecurity & Risk Management Specialist</p>
+    <button class="toggle-theme" onclick="toggleTheme()">Toggle Theme</button>
 </header>
 
 <section id="about">
