--- a/hash-demo-final.html
+++ b/hash-demo-final.html
@@ -72,7 +72,7 @@
       const resultBox = document.getElementById('result');
       resultBox.textContent = 'Processing...';
 
-      fetch('https://ibnomarhash.fly.dev/hash', {
+      fetch('https://ibnomar.fly.dev/hash', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ text: input })
