--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@ function showConfirmation() {
 
 <section id="about">
     <h2>About Me</h2>
-    <p>Cybersecurity Specialist with over 2 years of experience currently working at the Ministry of Interior. I specialize in governance, risk management, compliance, and data protection. I’m also an IEEE-published researcher with a strong focus on data security and innovation.</p>
+    <p>Cybersecurity Specialist with over 2 years of experience currently working at a DMO. I specialize in governance, risk management, compliance, and data protection. I’m also an IEEE-published researcher with a strong focus on data security and innovation.</p>
 </section>
 
 <section id="experience">
     <h2>Experience</h2>
-    <h3>Ministry of Interior (Jan 2023 – Present)</h3>
+    <h3>Data Management Office (Jan 2023 – Present)</h3>
     <h3>Cybersecurity Specialist at Data Management Office</h3>
     <ul>
         <li>Ensuring compliance with governance, risk, and compliance frameworks to mitigate security risk.</li>
@@ -106,12 +106,6 @@ function showConfirmation() {
     <p>Email: <a href="mailto:Ph.ROSh24@gmail.com">Ph.ROSh24@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/raed-shafei" target="_blank">Raed Shafei</a></p>
     <p>Location: Riyadh, Saudi Arabia</p>
-</section>
-
-<section id="resume">
-    <h2>Download Resume</h2>
-    <p>You can download my latest resume here:</p>
-    <a href="RaedShafei-CV.pdf" download class="button">Download Resume (PDF)</a>
 </section>
 
 <section id="services">
