--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ function showConfirmation() {
             <option value="PenTesting">Web Application Penetration Testing</option>
             <option value="Data">KPIs & Data Services</option>
             <option value="Tutoring">Cybersecurity Training</option>
+            <option value ="CV">Request a copy of my CV</option>
         </select><br><br>
 
         <label for="message">Message:</label><br>
